[tool.poetry]
name = "bpy-autocomplete"
version = "0.1.0"
description = ""
authors = ["Hugh Perkins <hughperkins@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "bpy" },
    { include = "bpy_autocomplete" }
]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
mypy = "^1.8.0"
pytest = "^7.4.4"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
